--- a/package.json
+++ b/package.json
@@ -15,19 +15,17 @@
     "restfull"
   ],
   "scripts": {
-    "dev": "nodemon index.ts"
+    "build": "tsc",
+    "lint": "eslint . --ext .ts",
+    "dev": "ts-node-dev --respawn index.ts",
+    "start": "tsc; nodemon index.js"
   },
   "peerDependencies": {
     "eslint": "^7.23.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-config-recommended": "^4.1.0",
-    "eslint-plugin-html": "^6.1.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.23.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "@typescript-eslint/eslint-plugin": "^4.26.1",
+    "@typescript-eslint/parser": "^4.26.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "prettier": "^2.2.1"
   },
   "dependencies": {
@@ -35,10 +33,20 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
-    "mongoose": "^5.12.3"
+    "mongoose": "^5.12.3",
+    "debug": "^4.3.1"
   },
   "devDependencies": {
-    "debug": "^4.3.1",
+    "@types/express": "^4.17.12",
+    "@types/node": "^15.12.2",
+    "@typescript-eslint/eslint-plugin": "^4.26.1",
+    "@typescript-eslint/parser": "^4.26.1",
+    "eslint": "^7.28.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "prettier": "^2.2.1",
+    "ts-node-dev": "^1.1.6",
     "typescript": "^4.3.2"
-  }
+  },
+  "prettier": "./prettierrc.json"
 }
