--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "restfull"
   ],
   "repository": {
-      "type": "git",
-      "url": "https://github.com/StevenBarquet/login-playground-back.git"
+    "type": "git",
+    "url": "https://github.com/StevenBarquet/login-playground-back.git"
   },
   "scripts": {
     "lint": "eslint . --ext .ts",
@@ -43,6 +43,8 @@
     "debug": "^4.3.1"
   },
   "devDependencies": {
+    "@types/config": "0.0.38",
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
     "@types/node": "^15.12.2",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
