--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "dev": "ts-node-dev --respawn ./src/index.ts"
   },
   "peerDependencies": {
-    "eslint": "^7.23.0",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
+    "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "prettier": "^2.2.1"
@@ -37,15 +37,17 @@
   "dependencies": {
     "config": "^3.3.6",
     "cors": "^2.8.5",
+    "debug": "^4.3.1",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
-    "mongoose": "^5.12.3",
-    "debug": "^4.3.1"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.12.3"
   },
   "devDependencies": {
     "@types/config": "0.0.38",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/node": "^15.12.2",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
